aula12/frontend.yml
# frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    role: frontend
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
